# rust-telemetry

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  otel-collector-config.yml
.claude/: settings.local.json
migrations/: 20260222000000_create_users.sql
scripts/: create-user.sh  docker-ps.sh  get-users.sh  logs.sh  start.sh  stop.sh
src/: db.rs  handlers.rs  main.rs  models.rs  otel.rs  routes.rs  state.rs  telemetry.rs
