[package]
name = "rust-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio      = { version = "1", features = ["full"] }
axum       = "0.8"
sqlx       = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "uuid"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }
