[package]
name = "rust-telemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio      = { version = "1", features = ["full"] }
axum       = "0.8"
sqlx       = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "uuid"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
uuid       = { version = "1", features = ["v4", "serde"] }

# OpenTelemetry / Tracing
tracing                    = "0.1"
tracing-subscriber         = { version = "0.3", features = ["env-filter"] }
opentelemetry              = "0.31"
opentelemetry_sdk          = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp         = { version = "0.31", features = ["grpc-tonic", "metrics"] }
tracing-opentelemetry      = "0.32"
axum-tracing-opentelemetry = "0.33"
